--- a/templates/chat.html
+++ b/templates/chat.html
@@ -117,7 +117,7 @@
                     'Content-Type': 'application/json',
                 },
                 body: JSON.stringify({
-                    "sys": "Hi I am hub108 bud, How can I help you?",
+                    "sys": "Hi I am your info-bot, How can I help you?",
                     "user": ""
                 })
             }).then(response => response.json())
@@ -131,7 +131,7 @@
                             'Content-Type': 'application/json',
                         },
                         body: JSON.stringify({
-                            "sys": "Hi I am hub108 bud, How can I help you?"
+                            "sys": "Hi I am your info-bot, How can I help you?"
                         })
                     }).then(response => response.json())
                         .then(data => {
